LABS/LAB K8S/k8ss/MICROSERV_K8S/files/envoy.yaml
static_resources:
  listeners:
  - name: listener_http
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          normalize_path: true
          path_with_escaped_slashes_action: KEEP_UNCHANGED
          route_config:
            name: local_route
            virtual_hosts:
            - name: cinema_backend
              domains: ["*"]
              routes:
              - match: { prefix: "/api/catalog" }
                route: { cluster: catalog }
              - match: { prefix: "/api/showtime" }
                route: { cluster: showtime }
              - match: { prefix: "/api/booking" }
                route: { cluster: booking }
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: catalog
    type: STRICT_DNS
    connect_timeout: 2s
    lb_policy: ROUND_ROBIN
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: catalog
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: catalog
                port_value: 8000

  - name: showtime
    type: STRICT_DNS
    connect_timeout: 2s
    lb_policy: ROUND_ROBIN
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: showtime
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: showtime
                port_value: 8000

  - name: booking
    type: STRICT_DNS
    connect_timeout: 2s
    lb_policy: ROUND_ROBIN
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: booking
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: booking
                port_value: 8000
